--- a/cusstyle.css
+++ b/cusstyle.css
@@ -1,3 +1,52 @@
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
+body{line-height:1}
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
+nav ul{list-style:none}
+blockquote,q{quotes:none}
+blockquote:before,blockquote:after,q:before,q:after{content:none}
+a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent;text-decoration:none}
+mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}
+del{text-decoration:line-through}
+abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}
+table{border-collapse:collapse;border-spacing:0}
+hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}
+input,select{vertical-align:middle}
+li{list-style:none}
+
+
+html,body{ 
+	width:100%;
+	height:100%;
+	background:#111;
+  background-attachment: scroll;
+}
+
+html{
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+body{
+  font:normal 75% Arial, Helvetica, sans-serif;
+}
+
+canvas{
+  display:block;
+  vertical-align:bottom;
+}
+
+
+/* ---- particles.js container ---- */
+
+#particles-js{
+  width: 100%;
+  height: 100%;
+  background-color: #111;
+  background-image: url('');
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
+
 :root{
     --spink:#E4ABA3;
     --slight:#FCFFF1;
@@ -17,7 +66,6 @@
   *[data-animation="ripple"] {
     height: 50px;
     width: 50px;
-    /* margin: 5px; */
     padding: 0px;
     display: flex;
     justify-content: center;
@@ -92,8 +140,11 @@
     padding: 40px;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
     margin: auto;
-    overflow: auto;
+    height: 100%;
+    max-width: 1400px;
   }
   .group{
     border: solid 2px var(--slight);
@@ -114,4 +165,21 @@
     position: absolute;
     top:20px;
     z-index: 3;
+  }
+  .container-fulid{
+    overflow: auto;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+
+  @media (max-width: 1120px) {
+    .web-box{
+      width: 1120px;
+    }
+
   }
